// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/page/Header renders reactive headers correctly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <TableHeader
    plansArray={
      Array [
        Object {
          "id": "plan-id-2",
          "jurisdiction_depth": 2,
          "jurisdiction_id": "3378",
          "jurisdiction_name": "TLv1_02",
          "jurisdiction_name_path": Array [
            "Canton Tha Luang",
            "Tha Luang Village",
          ],
          "jurisdiction_parent_id": "2977",
          "jurisdiction_path": Array [
            "2989",
            "2977",
          ],
          "plan_date": "2019-06-18",
          "plan_effective_period_end": "2019-06-18",
          "plan_effective_period_start": "2019-07-31",
          "plan_fi_reason": "Case Triggered",
          "plan_fi_status": "A1",
          "plan_id": "plan-id-2",
          "plan_intervention_type": "IRS",
          "plan_status": "active",
          "plan_title": "A1-Tha Luang Village 1 Focus 01",
          "plan_version": "1",
        },
      ]
    }
  >
    <h3
      className="mb-3 mt-5 page-title"
    >
      Reactive
    </h3>
  </TableHeader>
</Router>
`;

exports[`components/page/Header renders routine headers correctly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <TableHeader
    plansArray={
      Array [
        Object {
          "id": "ed2b4b7c-3388-53d9-b9f6-6a19d1ffde1f",
          "jurisdiction_depth": 2,
          "jurisdiction_id": "450fc15b-5bd2-468a-927a-49cb10d3bcac",
          "jurisdiction_name": "NVI_439",
          "jurisdiction_name_path": Array [
            "Chadiza",
            "Naviluli",
          ],
          "jurisdiction_parent_id": "2944",
          "jurisdiction_path": Array [
            "2939",
            "2944",
          ],
          "plan_date": "2019-06-18",
          "plan_effective_period_end": "2019-06-18",
          "plan_effective_period_start": "2019-07-31",
          "plan_fi_reason": "Routine",
          "plan_fi_status": "A1",
          "plan_id": "10f9e9fa-ce34-4b27-a961-72fab5206ab6",
          "plan_intervention_type": "FI",
          "plan_status": "active",
          "plan_title": "A1-Tha Luang Village 1 Focus 01",
          "plan_version": "1",
        },
      ]
    }
  >
    <div
      className="routine-heading"
    >
      <Row
        tag="div"
      >
        <div
          className="row"
        >
          <Col
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
            xs="6"
          >
            <div
              className="col-6"
            >
              <h3
                className="mb-3 mt-5 page-title"
              >
                Routine
              </h3>
            </div>
          </Col>
          <Col
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
            xs="6"
          >
            <div
              className="col-6"
            >
              <LinkAsButton
                classNameProp="focus-investigation btn btn-primary float-right mt-5"
                text="Add Focus Investigation"
                to="/plans/new"
              >
                <Link
                  className="focus-investigation btn btn-primary float-right mt-5"
                  to="/plans/new"
                >
                  <LinkAnchor
                    className="focus-investigation btn btn-primary float-right mt-5"
                    href="/plans/new"
                    navigate={[Function]}
                  >
                    <a
                      className="focus-investigation btn btn-primary float-right mt-5"
                      href="/plans/new"
                      onClick={[Function]}
                    >
                      Add Focus Investigation
                    </a>
                  </LinkAnchor>
                </Link>
              </LinkAsButton>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </TableHeader>
</Router>
`;
